--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,11 +13,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
+			<h1>Agency Vibrations</h1>
 			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
+				Welcome to the <a href="https://agency-vibrations.netlify.app/">Agency Vibrations</a> starter template. This
+				template serves as a somewhat opinionated template for digital agencies to get their website up and running so they can focus on the more important aspects of running a business. 
 			</p>
 			<p>
 				This template comes with a few integrations already configured in your
