--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,15 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
-			<h1>Agency Vibrations</h1>
+			<div class="hero">
+				<div class="hero-title">
+					<h1>Agency Vibrations</h1>
+					<h3>Web Dev, Markting, and Design</h3>
+				</div>
+				<div class="hero-image">
+					<img src="../public/tarheeldevlogo.png" alt="my logo" />
+				</div>
+			</div>
 			<p>
 				Welcome to the <a href="https://agency-vibrations.netlify.app/">Agency Vibrations</a> starter template. This
 				template serves as a somewhat opinionated template for digital agencies to get their website up and running so they can focus on the more important aspects of running a business. 
