--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,21 +16,29 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 			<div class="hero">
 				<div class="hero-title">
 					<h1>Agency Vibrations</h1>
-					<h3>Web Dev, Markting, and Design</h3>
+					<h3>Web Dev, Marketing, and Design</h3>
 				</div>
 				<div class="hero-image">
 					<img src="../public/tarheeldevlogo.png" alt="my logo" />
+					
 				</div>
-			</div>
-			<p>
+				<p>
 				Welcome to the <a href="https://agency-vibrations.netlify.app/">Agency Vibrations</a> starter template. This
 				template serves as a somewhat opinionated template for digital agencies to get their website up and running so they can focus on the more important aspects of running a business. 
 			</p>
+			</div>
+			<div>
+				<h2>Features</h2>
+				<ul>
+					<li>Fast Website</li>
+					<li>Make Money</li>
+					<li>Cryptobabes</i>
+				</ul>
+			</div>
+			
+			<h2>Quick Start, Quick Tips</h2>
 			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
+				
 			</p>
 			<p>Here are a few ideas on how to get started with the template:</p>
 			<ul>
@@ -40,17 +48,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 				<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
 				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
 			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
+			
 		</main>
 		<Footer />
 	</body>
